# mcalendar

./: CMakeLists.txt  README.md  daterange.h  mcalendar.cpp  mcalendar.doxyfile  mcalendar.h  mcalendar.pri  sampleday.cpp  sampleday.h  timerange.h
example/: main.cpp  mcalendar.pro
test_mcalendar/: CMakeLists.txt  test_mcalendar.pro  tst_mcalendartest.cpp
